cors problem test2

--- a/index.html
+++ b/index.html
@@ -879,7 +879,9 @@
       return fetch(route, {
         method: 'PUT',
         headers: {
-          'Content-Type': 'application/json'
+          'Content-Type': 'application/json',
+          'Access-Control-Allow-Origin': '*',
+          'Access-Control-Allow-Methods': 'POST,PATCH,OPTIONS'
         },
         body: JSON.stringify(data)
       })
