cors problem test2

--- a/index.html
+++ b/index.html
@@ -879,9 +879,7 @@
       return fetch(route, {
         method: 'PUT',
         headers: {
-          'Content-Type': 'application/json',
-          'Access-Control-Allow-Origin': '*',
-          'Access-Control-Allow-Methods': 'POST,PATCH,OPTIONS'
+          'Content-Type': 'application/json'
         },
         body: JSON.stringify(data)
       })
