cors problem test2

--- a/index.html
+++ b/index.html
@@ -785,7 +785,7 @@
         <div style="display: flex; justify-content: space-evenly;">
           <span>Total Cost</span>
           <span id="totalcost2">0.00</span>
-          <img id="refreshbtn" src="/images/refresh.svg" alt="" style="width: 25px; height: 20px;">
+          <img id="refreshbtn" src="../images/refresh.svg" alt="" style="width: 25px; height: 20px;">
         </div>
       </div>
       <div id="costHistory" class="costhistory" style="height: 35vh; width: 95vw;">
@@ -901,7 +901,7 @@
     loader.setAttribute("class", "loading")
     loader.innerHTML = `
             <div>
-              <img style="height: 50px; width: 50px;" src="/images/loading.gif" alt="loading...">
+              <img style="height: 50px; width: 50px;" src="../images/loading.gif" alt="loading...">
             </div>
         `
 
@@ -918,7 +918,7 @@
       loader2.setAttribute("class", "loading2")
       loader2.innerHTML = `
 
-              <img style="" src="/images/loading.gif" alt="loading...">
+              <img style="" src="../images/loading.gif" alt="loading...">
 
         `
       b.appendChild(loader2)
@@ -952,7 +952,7 @@
       loader2.setAttribute("class", "loading2")
       loader2.innerHTML = `
 
-              <img style="" src="/images/loading.gif" alt="loading...">
+              <img style="" src="../images/loading.gif" alt="loading...">
 
         `
       b.appendChild(loader2)
@@ -985,7 +985,7 @@
       loader2.setAttribute("class", "loading2")
       loader2.innerHTML = `
 
-              <img style="" src="/images/loading.gif" alt="loading...">
+              <img style="" src="../images/loading.gif" alt="loading...">
 
         `
       b.appendChild(loader2)
